syntax = "proto3";

option go_package = "./pb";

package pb;


message SearchForReq {
  string name = 1;
}

message SearchForResp {
  string greet = 1;
}

service es {
  rpc SearchFor(SearchForReq) returns (SearchForResp);
}